--- a/index.html
+++ b/index.html
@@ -35,22 +35,20 @@
 
       <div class="row">
         <div class="row" style="gap:10px; flex-wrap:wrap;">
-          <input id="email" type="email" placeholder="Email" autocomplete="username" />
-          <input id="password" type="password" placeholder="Password" autocomplete="current-password" />
+          <input id="email" type="email" placeholder="Email" />
+          <input id="password" type="password" placeholder="Password" />
           <button id="btnLogin" class="btn">登入</button>
           <button id="btnSignup" class="btn ghost">註冊</button>
         </div>
       </div>
     </section>
 
-    <!-- ✅ 預設顯示：避免未登入先看到讀經內容 -->
-    <section class="card" id="loginHint">
+    <section class="card" id="loginHint" style="display:none;">
       <div class="label">請先登入</div>
       <p class="hint">登入後才會載入你的 365 讀經計畫與打卡進度（每個帳號各自保存）。</p>
     </section>
 
-    <!-- ✅ 預設隱藏：避免一開始就閃出讀經計畫 -->
-    <div id="appContent" style="display:none;">
+    <div id="appContent">
 
       <section class="card">
         <div class="row">
@@ -155,7 +153,7 @@
 
   </main>
 
-  <!-- ✅ SDK 必須在 app.js 前 -->
+  <!-- 只載入一次 Supabase SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="app.js"></script>
 </body>
