--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 
   <!-- ⚠️ 只能有這兩行，不能多 -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="app.js"></script>
+  <script src="./app.js" defer></script>
 </body>
 </html>
+
