--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
       </div>
 
       <div class="row right" style="margin-top:12px;">
-        <button id="btnRegister" class="btn ghost">註冊</button>
-        <button id="btnLogin" class="btn primary">登入</button>
+      <button id="btnRegister" type="button">註冊</button>
+<button id="btnLogin" type="button">登入</button>
+<button id="btnLogout" type="button">登出</button>
       </div>
 
       <div id="authMsg" class="hint" style="margin-top:10px;"></div>
@@ -147,4 +148,5 @@
   <script src="./app.js" defer></script>
 </body>
 </html>
+
 
